fix vertical alignment, fixes #2323
Closes #2323

Merge request studip/studip!1726

--- a/resources/assets/stylesheets/scss/responsive.scss
+++ b/resources/assets/stylesheets/scss/responsive.scss
@@ -235,6 +235,7 @@ $sidebarOut: -330px;
             .navigation-text {
                 flex: 1;
                 padding-top: 2px;
+                vertical-align: text-bottom;
             }
 
         }
